Update and rename FLAG.html to Whatdoyoulookingfor.html

--- a/Whatdoyoulookingfor.html
+++ b/Whatdoyoulookingfor.html
@@ -70,8 +70,9 @@
   <div class="container">
     <div class="glow"></div>
     <h1>NO FLAG HERE</h1>
-    <div class="subtitle">move along... nothing to see</div>
+    <div class="subtitle">Ei   EI</div>
   </div>
 
 </body>
+
 </html>
